# musicality-cli

./: .gitignore  README.md  pyproject.toml
musicality_cli/: cli.py  cli_manager.py
